# superchain-client

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: get-headers-http.rs  get-headers-ws.rs  get-height-http.rs  get-height-ws.rs  get-pair-http.rs  get-pair-ws.rs  get-pairs-http.rs  get-pairs-ws.rs  get-pool-http.rs  get-pool-ws.rs  get-pools-http.rs  get-pools-ws.rs  get-prices-http.rs  get-prices-ws-realtime.rs  get-prices-ws.rs  get-raw-reserves-http.rs  get-raw-reserves-ws.rs  get-trades-http.rs  get-trades-ws.rs  get-v3prices-http.rs  get-v3prices-ws.rs
node/: .eslintrc.json  .swcrc  README.md  jest.config.ts  package.json  tsconfig.json
node/examples/: README.md  index_arrow.js  index_json.js  package.json
node/src/: index.d.js  index.d.js.map  index.d.ts  index.js  index.js.map  index.ts
rust/: Cargo.toml  README.md
rust/examples/: uniswap.rs
rust/src/: lib.rs
rust/src/core/: builder.rs  client.rs  error.rs  mod.rs  provider.rs  utils.rs
rust/src/core/requests/: blocks.rs  btc.rs  curve.rs  erc20.rs  fuel.rs  logs.rs  mod.rs  transfers.rs  txs.rs  uniswap_v2.rs  uniswap_v3.rs
rust/src/core/types/: format.rs  fuel.rs  mod.rs  query.rs  status.rs  uniswap_v2.rs
rust/src/providers/: http.rs  ws.rs
src/: lib.rs
src/core/: builder.rs  client.rs  error.rs  mod.rs  provider.rs
src/core/types/: ethereum.rs  mod.rs  query.rs  uniswap_v2.rs  uniswap_v3.rs
src/providers/: http.rs  ws.rs
