[package]
name = "superchain-client"
version = "1.0.0-alpha1"
edition = "2021"

[dependencies]
csv-async = "1.2.5"
thiserror = "1.0.38"
reqwest = { version = "0.11.12", features = ["stream"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.9"
tungstenite = "0.18.0"
url = "2.3.1"
ethers = "1.0.2"
bitflags = "1.3.2"
futures = "0.3.25"
tokio = { version = "1.24.2", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
async-trait = "0.1.63"
base64 = "0.21.0"
tracing = "0.1.37"
futures-util = "0.3.26"
futures-channel = "0.3.26"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
dotenv = "0.15.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
default = []
