[package]
name = "superchain-client"
version = "0.2.6"
edition = "2021"
description = "Client SDK for Superchain The Open Index Protocol"
keywords = ["sdk", "blockchain", "indexing", "uniswap"]
categories = ["api-bindings"]
license = "MIT"
authors = ["Superchain Labs Limited. <info@superchain.network>"]
homepage = "https://superchain.network"
repository = "https://github.com/SuperchainNetwork/superchain-client"
documentation = "https://docs.superchain.network/introduction.html"

[dependencies]
csv-async = "1.2.6"
thiserror = "1.0.57"
reqwest = { version = "0.11.24", features = ["stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tungstenite = "0.21.0"
url = "2.5.0"
ethers-core = "2.0.14" 
bitflags = "2.4.2"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
http = "1.0.0"
async-trait = "0.1.77"
base64 = "0.22.0"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
strum = { version = "0.26.1", features = ["derive"] }
regex = "1.10.3"
num-derive = "0.4.2"
num-traits = "0.2.18"
strum_macros = "0.26.1"
lazy_static = "1.4.0"
tiny-keccak = { version = "2.0", features = ["sha3"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.11.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
